7th March 2010 - Euan Freeman
  - Added 'battery_hide' option.
  
6th March 2010 - Euan Freeman
  - Added panel autohide options.
  - Added 'next_task' and 'prev_task' to mouse actions.
  - Added 'urgent' and 'iconified' task types.
  - Re-arranged some layouts, e.g. Panel and Task.
  - Added timezone support for clock.
  - Added 'panel_layer' and 'strut_policy' options.
  - Added systray icon ASB and systray maximum icon size.
  - Cleaned up code.
  - Prepared for tintwizard 0.3 release.

3rd november 2009 - thierry lorthiois
  - call tintwizard with config file parameter.

27th September 2009 - Euan Freeman
  - Updated for tint2 revision 208 (systray_sort options)

20th September 2009 - Euan Freeman
  - Updated icon_hsb to icon_asb (hue -> alpha)

  - Added limits for asb to label widgets

17th September 2009 - Euan Freeman
  - Added support for tint2 tooltip customisation

11th September 2009 - Revision 146 - Euan Freeman
  - Added 'panel_dock' option

  - Split the Clock tab into 2 new tabs; Clock Display and Clock Settings

  - Added a formatting guide to the Clock Display tab

8th September 2009 - Revision 145 - Euan Freeman
  - Small edit to README

5th September 2009 - Revision 143 - Euan Freeman
  - Added 'Report Bug' option to the 'Help' menu

  - Added clickable URL in the About dialog to take you to the tintwizard website

3rd September 2009 - Revision 140 - Euan Freeman
  - Added 'systray_sort' option

  - Created documentation for developers (see doc folder) about how to modify tintwizard to add new tint2 settings.

3rd September 2009 - Revision 137 - Euan Freeman
  - User can now "disable" the 'taskbar_active_background_id' option

  - Renamed changelog.txt to ChangeLog

3rd September 2009 - Revision 136 - Euan Freeman
  - Added support for 'desktop_left' and 'desktop_right' mouse actions

3rd September 2009 - Revision 135 - Euan Freeman