@@ -1,6 +1,6 @@
 [ ABOUT ]
 
-tintwizard 0.3.1 (7th March 2010)
+tintwizard 0.3.3 (6th April 2010)
 
 Thank you for downloading tintwizard!
 
