@@ -1,3 +1,10 @@
+6th April 2010 - Euan Freeman
+  - Moved the tintwizard.conf file to the tint2 directory by default.
+  - Removed dir option from tintwizard.conf; just use the tint2 directory for everything.
+
+13th March 2010 - Euan Freeman
+  - Major refactoring of GUI creation.
+
 7th March 2010 - Euan Freeman
   - Added 'battery_hide' option.
   
